--- a/itunes-search/package.json
+++ b/itunes-search/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "@mdi/font": "^4.5.95",
     "@nuxtjs/vuetify": "^1.9.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
