--- a/petstore-vuex-firebase/package.json
+++ b/petstore-vuex-firebase/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "firebase": "^7.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuefire": "^2.2.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
